--- a/resources/sass/components/_home.scss
+++ b/resources/sass/components/_home.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   display: flex;
   height: 500px;
+  margin-top: 100px;
   align-items: center;
   justify-content: center;
 }
@@ -23,7 +24,7 @@
 @media #{$breakpoints-medium} {
 
 .home{
- 
+  margin-top: 0;
   height: 800px;
 }
 
